Updated Testing.feature to demonstrate that the tags passed to CucumberRunner.startCucumberRun actually filter the scenarios.

--- a/app.template
+++ b/app.template
@@ -7,5 +7,5 @@
     $('.box').css('background-color', 'red');
   });
 
-  startCucumberRun();
+  startCucumberRun({ tags: ["@test_tag"] });
 </script>
